# deds-project-2

./: .gitattributes  LICENSE  README.md  pyproject.toml
scripts/: prepare-kernel.sh
src/: game.py  level.py  main.py  player.py  qlearner.py  renderer.py
