[project]
name = "q-learning-grid-game"
version = "0.1.0"
description = "A grid-based game with Q-learning AI agent"
authors = [
  { name = "Peter van der Heijden", email = "contact@peterjarian.dev" },
]
requires-python = ">=3.12"
dependencies = ["numpy (>=2.2.6,<3.0.0)", "pygame (>=2.6.1,<3.0.0)", "matplotlib (>=3.10.3,<4.0.0)"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
name = "q-learning-grid-game"
version = "0.1.0"
description = "A grid-based game with Q-learning AI agent"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.black]
line-length = 120
